- Implemented: New switch type 'Selector' (big thanks to cgaudry)
- Implemented: OpenZWave, added COMMAND_CLASS_PROTECTION in configuration options
- Implemented: OTGW, added firmware version number in hardware setup page
- Implemented: Option to transfer old Percentage sensors to new Percentage sensors
- Implemented: Philips Hue, support for Groups (create them with an external app like HueMote)
- Implemented: RFXCom support for Legrand CAD
- Implemented: SBFSpot, support for multiple inverter instances
- Implemented: SolarEdge via Web API
- Implemented: Temperature Tab room selector
- Implemented: Thermosmart option to set specify outside temperature sensor
- Implemented: Waterflow sensor
- Implemented: Wind Beaufort scale
- Implemented: Wind Graph, option to delete a short-log data point
- Changed: EventSystem, don't process unused devices
- Changed: Fritzbox, Now updating text sensor on connect/disconnect
- Changed: OpenZWave, Control Panel log starts displaying from the end when entering for the first time
- Changed: OpenZwave, kWh sensor now maybe compatible with more hardware
- Changed: OpenZwave, not sending cold-white in the colorclass, solved issues on different zipato bulbs
- Changed: OpenZWave, Ranamed internally 'Color Control' to 'Color"
- Fixed: Alert Sensor, displaying sValue again
- Fixed: Blockly, Set user variables (you need to resave your blockly's)
- Fixed: Blockly, string uservariables where saved with quotes when not using with set-after
- Fixed: Changing device order when selected a Room in the lights/utility tab
- Fixed: CM180i graph display
- Fixed: Dummy RGB sensor creation (was created with wrong ID)
- Fixed: Edit Light/Switch Security sensors protected checkbox
- Fixed: EventSystem, now also handling sensors that only uses numbers instead of strings for data
- Fixed: Log display in webgui for log items containing multiple lines
- Fixed: Manual add Blyss type (Group code was wrong)