@@ -4,6 +4,11 @@
 #include <iostream>
 #include <map>
 
+namespace Json
+{
+	class Value;
+};
+
 class CPhilipsHue : public CDomoticzHardwareBase
 {
 	enum _eHueLightType
@@ -11,6 +16,7 @@ class CPhilipsHue : public CDomoticzHardwareBase
 		HLTYPE_NORMAL,
 		HLTYPE_DIM,
 		HLTYPE_RGBW,
+		HLTYPE_SCENE
 	};
 	struct _tHueLight
 	{
@@ -23,6 +29,12 @@ class CPhilipsHue : public CDomoticzHardwareBase
 	{
 		_tHueLight gstate;
 		std::vector<int> lights;
+	};
+	struct _tHueScene
+	{
+		std::string id;
+		std::string name;
+		std::string lastupdated;
 	};
 public:
 	CPhilipsHue(const int ID, const std::string &IPAddress, const unsigned short Port, const std::string &Username);
@@ -37,13 +49,17 @@ private:
 	boost::shared_ptr<boost::thread> m_thread;
 	std::map<int, _tHueLight> m_lights;
 	std::map<int, _tHueGroup> m_groups;
+	std::map<int, _tHueScene> m_scenes;
 
 	void Init();
 	bool StartHardware();
 	bool StopHardware();
 	void Do_Work();
 	bool GetStates();
-	void InsertUpdateSwitch(const int NodeID, const _eHueLightType LType, const bool bIsOn, const int BrightnessLevel, const int Sat, const int Hue, const std::string &Name);
+	bool GetLights(const Json::Value &root);
+	bool GetGroups(const Json::Value &root);
+	bool GetScenes(const Json::Value &root);
+	void InsertUpdateSwitch(const int NodeID, const _eHueLightType LType, const bool bIsOn, const int BrightnessLevel, const int Sat, const int Hue, const std::string &Name, const std::string &Options);
 	bool SwitchLight(const int nodeID, const std::string &LCmd, const int svalue);
 };
 
